# PythonDataSiencePiscine

./: README.md  Readme.md  check_package.sh  install_package.sh
OpenCv_bootcamp/: Download_and_unzip.py  bitwise_operations.py  brigthning_images.py  display_original_image.py  image_threshholding.py  log_manipulation.py  multiplication_or_contrast.py  sheet_music_reader.py
ex00/: hello.py
python0/: README.md  clean_package.sh  install_package.sh  notes.txt
python0/ex00/: Hello.py
python0/ex01/: format_ft_time.py  notes.txt
python0/ex02/: find_ft_type.py
python0/ex03/: NULL_not_found.py  tester.py
python0/ex04/: notes.txt  whatis.py
python0/ex05/: building.py
python0/ex06/: filterstring.py  ft_filter.py
python0/ex07/: sos.py
python0/ex08/: Loading.py  tester.py
python0/ex09/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
python0/ex09/ft_package/: __init__.py
python0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
python0/ex09/ft_package/count_in_list/: __init__.py  __main__.py  count_in_list.py
python0/ex09/tests/: test.py
python1/ex00/: give_bmi.py  tester.py
python1/ex01/: array2D.py
python1/ex02/: load_image.py
python1/ex03/: load_image.py  zoom.py
python1/ex04/: load_image.py  rotate.py  zoom.py
python1/ex05/: load_image.py  pimp_image.py  tester.py
python2/ex00/: load_csv.py  tester.py
python2/ex01/: aff_life.py
python2/ex02/: aff_pop.py
python2/ex03/: projection_life.py
python3/ex00/: S1E9.py
python3/ex01/: S1E7.py  tester.py
python3/ex02/: DiamondTrap.py  S1E9.py  tester.py
python3/ex03/: ft_calculator.py
python3/ex04/: ft_calculator.py
(+4 files in other folders)
